Changed how AATF is handled for easier merging in the future

--- a/4ccEditor.vcxproj.filters
+++ b/4ccEditor.vcxproj.filters
@@ -83,4 +83,15 @@
   <ItemGroup>
     <Manifest Include="GdiScaling.manifest" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="4cc_med.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="4cc_sm.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="vgl_logo.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
